--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "fs": "0.0.1-security",
+    "sha1": "^1.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
