--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.1-security",
     "sha1": "^1.1.1",
     "vue": "^2.6.10",
+    "vue-multi-date-picker": "^1.5.0",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
