--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-vue": "^5.2.2",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
